--- a/index.html
+++ b/index.html
@@ -1,108 +1,64 @@
 <!doctype html>
 <html lang="en">
-
-<head>
-  <meta charset="utf-8">
-  <link rel="shortcut icon" type="x=icon" href="../img/Image (2).jpg">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>BliTZW0lF EARPHONES</title>
-  <link rel="stylesheet" href="style.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-</head>
-
-<body>
-
-  <a href="../index.html" class="back home">
-    <h2>Home</h2>
-  </a>
-
-  <div class="carousel-container">
-    <div id="imageCarousel" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-inner">
-
-        <div class="carousel-item active">
-          <div class="card shadow rounded-5 mx-auto" style="max-width: 500px;">
-            <img src="../img/New.jpg" class="card-img-top" alt="Slide 1">
-          </div>
+  <head>
+    <meta charset="utf-8">
+    <link rel="shortcut icon" type="x=icon" href="img/Image (2).jpg">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Firstportfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+  </head>
+  <body>
+    <section class="section">
+        <div class="section__container">
+            <div class="content">
+                <p class="subtitle">HELLO</p>
+                <h1 class="title">
+                    I'm <span>Christelle Keith!<br/></span>
+                </h1>
+                <p>A girl wants to become a web developer. </p>
+            </div>
+            <div class="image">
+                <img src="img/Image.jpg" alt="">
+            </div>
         </div>
+    </section>
 
-        <div class="carousel-item active">
-          <div class="card shadow rounded-5 mx-auto" style="max-width: 500px;">
-            <img src="../img/slider2.jpg" class="card-img-top" alt="Slide 2">
-          </div>
-        </div>
-        
-        <div class="carousel-item">
-          <div class="card shadow rounded-5 mx-auto" style="max-width: 500px;">
-            <img src="../img/slider3.jpg" class="card-img-top" alt="Slide 3">
-          </div>
-        </div>
-
-        <div class="carousel-item">
-          <div class="card shadow rounded-5 mx-auto" style="max-width: 500px;">
-            <img src="../img/slider4.jpg" class="card-img-top" alt="Slide 4">
-          </div>
-        </div>
-
-        <div class="carousel-item">
-          <div class="card shadow rounded-5 mx-auto" style="max-width: 500px;">
-            <img src="../img/slider5.jpg" class="card-img-top" alt="Slide 5">
-          </div>
-        </div>
-
-        <div class="carousel-item">
-          <div class="card shadow rounded-5 mx-auto" style="max-width: 500px;">
-            <img src="../img/slider6.jpg" class="card-img-top" alt="Slide 6">
-          </div>
-        </div>
-
-        <div class="carousel-item">
-          <div class="card shadow rounded-5 mx-auto" style="max-width: 500px;">
-            <img src="../img/slider7.jpg" class="card-img-top" alt="Slide 7">
-          </div>
-        </div>
-
-        <div class="carousel-item">
-          <div class="card shadow rounded-5 mx-auto" style="max-width: 500px;">
-            <img src="../img/slider8.jpg" class="card-img-top" alt="Slide 8">
-          </div>
-        </div>
-
-        <div class="carousel-item">
-          <div class="card shadow rounded-5 mx-auto" style="max-width: 500px;">
-            <img src="../img/slider9.jpg" class="card-img-top" alt="Slide 9">
-          </div>
-        </div>
-
-      </div>
-
- 
-      <button class="carousel-control-prev" type="button" data-bs-target="#imageCarousel" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#imageCarousel" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
+    <div class="Activities">
+        <h1>Activities</h1>
     </div>
-  </div>
-
-
-  <div class="product-info">
-    <h1>500mAh High Capacity<br>Long Service Time</h1>
-    <p class="subtitle">Let wonderful melody accompany you all day</p>
-  </div>
-
-  <ul class="spectlist">
-    <li>Standby Time: 180 days</li>
-    <li>Charging Time: 1.5–2h</li>
-    <li>Play/Call Time: 6.5h (ANC OFF/Transparent Mode), 6h (ANC ON)</li>
-  </ul>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
-</body>
-
+    <div class="container pb-5">
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+        <div class="col">
+          <div class="card shadow-sm rounded-4" style="width: 100%; height: 400px;">
+            <img src="img/slider8.jpg" class="card-img-top rounded-top-4" alt="Earphones" style="height: 250px; object-fit: cover;">
+            <div class="card-body d-flex flex-column justify-content-between">
+              <h5 class="card-title text-center">BLITZWOLF EARPHONES</h5>
+              <a href="A04/index.html" class="btn btn-primary align-self-center">Click here</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card shadow-sm rounded-4" style="width: 100%; height: 400px;">
+            <img src="img/sample2.jpg" class="card-img-top rounded-top-4" alt="Activity 2" style="height: 200px; object-fit: cover;">
+            <div class="card-body d-flex flex-column justify-content-between">
+              <h5 class="card-title text-center">Activity 2</h5>
+              <a href="#" class="btn btn-primary align-self-center">Go Somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card shadow-sm rounded-4" style="width: 100%; height: 400px;">
+            <img src="img/sample3.jpg" class="card-img-top rounded-top-4" alt="Activity 3" style="height: 200px; object-fit: cover;">
+            <div class="card-body d-flex flex-column justify-content-between">
+              <h5 class="card-title text-center">Activity 3</h5>
+              <a href="#" class="btn btn-primary align-self-center">Go Somewhere</a>
+            </div>
+          </div>
+        </div>
+    
+      </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
+  </body>
 </html>
