--- a/A06/index.html
+++ b/A06/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <link rel="shortcut icon" type="image/x-icon" href="img/Image (2).jpg"> <!-- Fixed path -->
+  <link rel="shortcut icon" type="image/x-icon" href="../img/Image (2).jpg"> 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Gallery</title>
   <link rel="stylesheet" href="style.css">
