--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar">
         <div class="container">
             <a href="index.html" class="nav-item">Home</a>
-            <a href="#about" class="nav-item">About</a>
+            <a href="Abt.index.html" class="nav-item">About</a>
             <a href="Project.index.html" class="nav-item">Projects</a>
         </div>
     </nav>
