--- a/A07/index.html
+++ b/A07/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Harry Potter Characters</title>
-    <link rel="shortcut icon" type="image/x-icon" href="../img/Image (2).jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Lora:wght@400;500&display=swap"
         rel="stylesheet" />
@@ -32,7 +31,7 @@
             top: 20px;
             left: 20px;
             text-decoration: none;
-            color: #4aa9ccc2;
+            color: #ffcc00;
             z-index: 1000;
         }
 
@@ -62,15 +61,15 @@
             border-radius: 30px;
             padding: 14px 20px;
             font-size: 1.1rem;
-            background-color: #222;
-            color: white;
-            border: 1px solid #444;
+            background-color: #e9f0ff;
+            color: black;
+            border: 1px solid #ccc;
         }
 
         .search-input:focus {
             outline: none;
+            box-shadow: 0 0 10px 2px #ffcc00;
             border-color: #ffcc00;
-            box-shadow: 0 0 10px rgba(255, 204, 0, 0.5);
         }
 
         .btn-search {
@@ -89,55 +88,78 @@
         }
 
         .card {
-            background: linear-gradient(to bottom right, rgba(20, 20, 20, 0.9), rgba(255, 204, 0, 0.3));
-            color: white;
+            background: linear-gradient(to bottom right, rgba(30, 30, 30, 0.95), rgba(20, 20, 20, 0.95));
+            color: #fff;
             border-radius: 20px;
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4);
+            box-shadow: 0 12px 25px rgba(23, 21, 21, 0.5);
             overflow: hidden;
             margin-bottom: 30px;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
+            width: 100%;
+            max-width: 22rem;
+            border: 1px solid rgba(255, 204, 0, 0.2);
         }
 
         .card:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 12px 25px rgba(0, 0, 0, 0.5);
+            transform: translateY(-12px);
+            box-shadow: 0 16px 30px rgba(236, 223, 223, 0.6);
         }
 
         .image-box {
-            background-color: #111;
-            text-align: center;
-            padding: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding-top: 20px;
         }
 
         .image-box img {
-            width: 160px;
-            height: 160px;
+            width: 150px;
+            height: 150px;
             object-fit: cover;
             border-radius: 50%;
-            border: 4px solid #ffcc00;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
-        }
-
-        .card-body {
-            padding: 20px;
-            background-color: #1a1a1a;
+            border: 3px solid #ffcc00;
+            box-shadow: 0 0 15px rgba(255, 204, 0, 0.6), 0 0 8px rgba(0, 0, 0, 0.5);
         }
 
         .card-title {
             font-family: 'Lora', serif;
-            font-size: 1.6rem;
-            font-weight: 600;
+            font-size: 1.8rem;
+            font-weight: bold;
             color: #ffcc00;
+            margin-bottom: 10px;
         }
 
         .card-text {
-            color: #ddd;
+            color: #dddddd;
+            font-size: 1rem;
             margin-bottom: 10px;
+        }
+
+        .btn-outline-secondary {
+            color: #ffcc00;
+            border-color: #ffcc00;
+        }
+
+        .btn-outline-secondary:hover {
+            background-color: #ffcc00;
+            color: #1a1a1a;
         }
 
         @media (max-width: 768px) {
             h1 {
                 font-size: 2rem;
+            }
+
+            .card {
+                margin: 0 auto 30px;
+            }
+
+            .card-title {
+                font-size: 1.5rem;
+            }
+
+            .card-text {
+                font-size: 0.95rem;
             }
         }
     </style>
@@ -148,80 +170,57 @@
         <a href="../Project.index.html" class="back home">
             <h2>Back</h2>
         </a>
+
         <h1>Harry Potter Characters</h1>
 
         <div class="search-container">
             <input id="characterSearch" type="text" class="form-control search-input" placeholder="Enter character name"
-                onkeypress="handleEnter(event)" />
+                autocomplete="off" />
             <button class="btn btn-search" onclick="fetchCharacter()">Search</button>
         </div>
 
+        <div id="characterDisplay" class="row justify-content-center"></div>
 
-        <div id="characterDisplay" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4 justify-content-center"></div>
-    </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+        <script>
+            function fetchCharacter() {
+                var searchInput = document.getElementById('characterSearch').value.toLowerCase();
+                var mainContainer = document.getElementById('characterDisplay');
+                mainContainer.innerHTML = '';
 
-    ->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-        function handleEnter(event) {
-            if (event.key === 'Enter') {
-                fetchCharacter();
+                fetch('https://hp-api.onrender.com/api/characters')
+                    .then(response => response.json())
+                    .then(data => {
+                        var character = data.find(char => char.name.toLowerCase() == searchInput);
+
+                        if (character) {
+                            var picture = character.image && character.image.trim() !== ''
+                                ? character.image
+                                : 'https://via.placeholder.com/160?text=No+Image';
+
+                            mainContainer.innerHTML =
+                                '<div class="card" style="width: 20rem;">' +
+                                '<div class="image-box">' + '<img src="' + picture + '" class="card-img-top" alt="' + character.name + '">' +
+                                '</div>' +
+                                '<div class="card-body">' + '<h5 class="card-title">' + character.name + '</h5>' +
+                                '<p class="card-text"><strong>Actor:</strong> ' + (character.actor || 'N/A') + '</p>' +
+                                '<p class="card-text"><strong>Gender:</strong> ' + (character.gender || 'N/A') + '</p>' +
+                                '<p class="card-text"><strong>House:</strong> ' + (character.house || 'N/A') + '</p>' +
+                                '<p class="card-text"><strong>Birthday:</strong> ' + (character.dateOfBirth || 'N/A') + '</p>' +
+                                '<a href="view.html?name=' + character.name + '" class="btn btn-outline-secondary rounded-5 btn-sm">View More</a>'
+                            '</div>' +
+                                '</div>';
+
+                        } else {
+                            mainContainer.innerHTML = '<p class="text-warning">Character not found. Try another name!</p>';
+                        }
+                    })
+                    .catch(error => {
+                        console.error('Error:', error);
+                        mainContainer.innerHTML = '<p class="text-danger">Failed to load character data.</p>';
+                    });
             }
-        }
-
-        async function fetchCharacter() {
-            const name = document.getElementById('characterSearch').value.trim();
-            const displayDiv = document.getElementById('characterDisplay');
-            displayDiv.innerHTML = '';
-
-            if (!name) {
-                displayDiv.innerHTML = '<p class="text-warning">Please enter a character name!</p>';
-                return;
-            }
-
-            try {
-                const response = await fetch('https://hp-api.onrender.com/api/characters');
-                const characters = await response.json();
-
-                const character = characters.find(
-                    char => char.name.toLowerCase() === name.toLowerCase()
-                );
-                function formatDate(dateString) {
-                    if (!dateString) return 'N/A';
-
-                    const [day, month, year] = dateString.split('-');
-                    if (!day || !month || !year) return 'N/A';
-
-                    const date = new Date(`${year}-${month}-${day}`);
-                    const options = { year: 'numeric', month: 'long', day: 'numeric' };
-                    return date.toLocaleDateString('en-US', options);
-                }
-
-                if (character) {
-                    displayDiv.innerHTML =
-                        '<div class="col">' +
-                        '<div class="card mx-auto">' +
-                        '<div class="image-box">' +
-                        '<img src="' + (character.image || 'https://via.placeholder.com/180x180?text=No+Image') + '" alt="' + character.name + '">' +
-                        '</div>' +
-                        '<div class="card-body">' +
-                        '<h5 class="card-title">' + character.name + '</h5>' +
-                        '<p class="card-text"><strong>House:</strong> ' + (character.house || 'N/A') + '</p>' +
-                        '<p class="card-text"><strong>Actor:</strong> ' + (character.actor || 'N/A') + '</p>' +
-                        '<p class="card-text"><strong>Birthday:</strong> ' + formatDate(character.dateOfBirth) + '</p>' +
-                        '</div>' +
-                        '</div>' +
-                        '</div>';
-                } else {
-                    displayDiv.innerHTML = '<p class="text-warning">Character not found. Try another name!</p>';
-                }
-            } catch (error) {
-                console.error(error);
-                displayDiv.innerHTML = '<p class="text-danger">Failed to load character data. Please try again later.</p>';
-            }
-        }
-
-    </script>
+        </script>
 </body>
 
 </html>
