--- a/index.html
+++ b/index.html
@@ -1,26 +1,59 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <link rel="shortcut icon" type="x=icon" href="img/Image (2).jpg">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Firstportfolio</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-  </head>
-  <body>
-    <nav class="navbar">
-        <div class="container">
-            <a href="index.html" class="nav-item">Home</a>
-            <a href="Abt.index.html" class="nav-item">About</a>
-            <a href="Project.index.html" class="nav-item">Projects</a>
-        </div>
-    </nav>
-    <div class="content">
-       <img src="img/Image.jpg" alt="Profile Picture" class="profile-pic">
-        <h1>Hello, I'm Christelle Keith!</h1>
-        <p>Welcome to my personal website</p>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>PortFolio</title>
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
+</head>
+
+<body>
+
+  <nav class="navbar navbar-expand-lg custom-navbar">
+    <div class="container">
+      <a class="navbar-brand" href="#">PortFolio</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#testNavbar"
+        aria-controls="testNavbar" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="testNavbar">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="Project.index.html">Projects</a></li>
+        </ul>
+      </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
-  </body>
-</html>
+  </nav>
+
+  <section class="name">
+  <div class="content">
+    <h1>Hi I'm Christelle Keith!</h1>
+    <p class="quote"><span class="green">DIT 2-1</span></p>
+
+    <div class="social-links">
+      <a href="https://www.instagram.com/chrstllkhtdlsrys/profilecard/?igsh=MXB6czJ1b3RweDZkMQ==" target="_blank">
+        <i class="bi bi-instagram"></i>
+      </a>
+      <a href="https://www.facebook.com/christellekeithdelosreyes" target="_blank">
+        <i class="bi bi-facebook"></i>
+      </a>
+      <a href="https://github.com/Ck-delosreyes/Ck-delosreyes.github.io" target="_blank">
+        <i class="bi bi-github"></i>
+      </a>
+    </div>
+  </div>
+
+  <div class="profile-image">
+    <img src="img/Profile.png" alt="Profile Image" />
+  </div>
+</section>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+
+</html
