--- a/Abt.index.html
+++ b/Abt.index.html
@@ -11,9 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
         body {
-            background: linear-gradient(to right, #2B4242, #ffffff);
+            background: linear-gradient(to right, #2B4242, #121212);
             font-family: 'Poppins', sans-serif;
-            color: #1e1e1e;
+            color: #f0f0f0;
         }
 
         .back-home {
@@ -21,7 +21,7 @@
             top: 20px;
             left: 20px;
             text-decoration: none;
-            color: #000000c2;
+            color: #cccccc;
             z-index: 1000;
         }
 
@@ -36,10 +36,10 @@
         }
 
         .header-gradient {
-            background: linear-gradient(to right, #2B4242, #ffffff);
+            background: linear-gradient(to right, #2B4242, #121212);
             padding: 4rem 1rem 2rem;
             text-align: center;
-            color: #2B4242;
+            color: #fdfdfd;
         }
 
         .header-gradient h1 {
@@ -62,10 +62,11 @@
             line-height: 1.8;
             max-width: 800px;
             margin: 0 auto 3rem;
+            color: #e0e0e0;
         }
 
         .section-title {
-            color: #2B4242;
+            color: #ffffff;
             font-size: 2rem;
             font-weight: 600;
             margin-bottom: 1rem;
@@ -79,17 +80,18 @@
         }
 
         .edu-list li {
-            background-color: rgba(0, 0, 0, 0.05);
+            background-color: rgba(255, 255, 255, 0.05);
             padding: 1rem;
             border-radius: 12px;
             margin-bottom: 1rem;
             font-size: 1.1rem;
-            transition: transform 0.3s ease;
+            transition: transform 0.3s ease, background-color 0.3s ease;
+            color: #f5f5f5;
         }
 
         .edu-list li:hover {
             transform: scale(1.02);
-            background-color: rgba(255, 255, 255, 0.12);
+            background-color: rgba(255, 255, 255, 0.08);
         }
 
         .email-section {
@@ -98,25 +100,25 @@
             justify-content: center;
             flex-wrap: wrap;
             gap: 0.75rem;
-            background-color: rgba(0, 0, 0, 0.05);
-            color: #1e1e1e;
+            background-color: rgba(255, 255, 255, 0.05);
+            color: #ffffff;
             padding: 1rem 2rem;
             border-radius: 10px;
             margin: 0 auto 2rem;
             max-width: 600px;
             text-align: center;
             word-break: break-word;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
             transition: background-color 0.3s ease;
         }
 
         .email-section:hover {
-            background-color: rgba(255, 255, 255, 0.12);
+            background-color: rgba(255, 255, 255, 0.1);
         }
 
         .email-section i {
             font-size: 1.4rem;
-            color: #2B4242;
+            color: #7fb8a4;
         }
 
         .email-section span {
@@ -129,7 +131,7 @@
         }
 
         .social-links a {
-            color: #2B4242;
+            color: #d0f0e0;
             margin: 0 15px;
             font-size: 1.5rem;
             transition: color 0.3s ease, transform 0.3s ease;
@@ -137,7 +139,7 @@
         }
 
         .social-links a:hover {
-            color: #e7f2f6;
+            color: #ffffff;
             transform: translateY(-3px);
         }
 
@@ -202,4 +204,5 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
