--- a/Abt.index.html
+++ b/Abt.index.html
@@ -5,196 +5,69 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>About</title>
-    <link rel="shortcut icon" type="x=icon" href="img/Image (2).jpg">
+    <link rel="shortcut icon" href="img/Image (2).jpg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
         body {
-            background: linear-gradient(to right, #2B4242, #121212);
-            font-family: 'Poppins', sans-serif;
-            color: #f0f0f0;
-        }
-
-        .back-home {
-            position: fixed;
-            top: 20px;
-            left: 20px;
-            text-decoration: none;
-            color: #cccccc;
-            z-index: 1000;
-        }
-
-        .back-home h2 {
-            font-size: 1rem;
-            font-weight: 600;
-            transition: color 0.3s;
-        }
-
-        .back-home h2:hover {
-            color: #bdbab2;
-        }
-
-        .header-gradient {
-            background: linear-gradient(to right, #2B4242, #121212);
-            padding: 4rem 1rem 2rem;
-            text-align: center;
-            color: #fdfdfd;
-        }
-
-        .header-gradient h1 {
-            font-size: 3rem;
-            font-weight: 600;
-        }
-
-        .header-gradient p {
-            font-size: 1.2rem;
-            font-weight: 300;
-        }
-
-        .main-content {
-            padding: 2rem 1.5rem;
-            text-align: center;
-        }
-
-        .main-content p {
-            font-size: 1.15rem;
-            line-height: 1.8;
-            max-width: 800px;
-            margin: 0 auto 3rem;
-            color: #e0e0e0;
-        }
-
-        .section-title {
-            color: #ffffff;
-            font-size: 2rem;
-            font-weight: 600;
-            margin-bottom: 1rem;
-        }
-
-        .edu-list {
-            list-style: none;
-            padding: 0;
-            max-width: 600px;
-            margin: 0 auto 3rem;
-        }
-
-        .edu-list li {
-            background-color: rgba(255, 255, 255, 0.05);
-            padding: 1rem;
-            border-radius: 12px;
-            margin-bottom: 1rem;
-            font-size: 1.1rem;
-            transition: transform 0.3s ease, background-color 0.3s ease;
-            color: #f5f5f5;
-        }
-
-        .edu-list li:hover {
-            transform: scale(1.02);
-            background-color: rgba(255, 255, 255, 0.08);
-        }
-
-        .email-section {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-wrap: wrap;
-            gap: 0.75rem;
-            background-color: rgba(255, 255, 255, 0.05);
-            color: #ffffff;
-            padding: 1rem 2rem;
-            border-radius: 10px;
-            margin: 0 auto 2rem;
-            max-width: 600px;
-            text-align: center;
-            word-break: break-word;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-            transition: background-color 0.3s ease;
-        }
-
-        .email-section:hover {
-            background-color: rgba(255, 255, 255, 0.1);
-        }
-
-        .email-section i {
-            font-size: 1.4rem;
-            color: #7fb8a4;
-        }
-
-        .email-section span {
-            font-size: 1.1rem;
-            font-weight: 500;
-        }
-
-        .social-links {
-            margin-top: 2rem;
+            background: linear-gradient(to bottom, #1e1e2f, #2b2b3c);
+            color: #f5f5f7;
+            overflow-x: hidden;
+            line-height: 1.6;
         }
 
         .social-links a {
             color: #d0f0e0;
-            margin: 0 15px;
+            margin: 0 10px;
             font-size: 1.5rem;
-            transition: color 0.3s ease, transform 0.3s ease;
-            text-decoration: none;
         }
 
         .social-links a:hover {
             color: #ffffff;
-            transform: translateY(-3px);
-        }
-
-        @media (max-width: 768px) {
-            .header-gradient h1 {
-                font-size: 2.3rem;
-            }
-
-            .main-content p,
-            .edu-list li {
-                font-size: 1rem;
-            }
-
-            .email-section {
-                max-width: 90%;
-            }
         }
     </style>
 </head>
 
-<body>
-    <a href="index.html" class="back-home">
-        <h2>Home</h2>
-    </a>
+<body class="pt-5">
+    
+    <div class="position-fixed top-0 start-0 m-3">
+        <a href="index.html" class="text-decoration-none text-white">
+            <i class="bi bi-arrow-left"></i> Home
+        </a>
+    </div>
 
-    <header class="header-gradient">
-        <h1>Christelle Keith P. Delos Reyes</h1>
-        <p>Personal Info & Educational Background</p>
+    <!-- Header -->
+    <header class="text-center py-5">
+        <h1 class="fw-bold">Christelle Keith P. Delos Reyes</h1>
+        <p class="lead">Personal Info & Educational Background</p>
     </header>
 
-    <main class="main-content container">
-        <p>
-            Hello, I'm Christelle Keith, a 2nd-year Diploma in Information Technology at PUP Sto. Tomas.
-            I’m passionate about both academics and personal growth. I enjoy exploring the world of technology while
-            also finding joy in my love for dogs, playing volleyball, and watching classic 90's movies.
-            I believe in lifelong learning and strive to grow each day through curiosity, creativity, and meaningful
-            experiences.
+    <main class="container text-center py-4">
+        <p class="mb-4 mx-auto" style="max-width: 800px;">
+            Hello, I'm Christelle Keith, a 2nd-year Diploma in Information Technology student at PUP Sto. Tomas.
+            I enjoy exploring technology while loving dogs, playing volleyball, and watching 90's movie.
         </p>
 
-        <div class="section-title">Educational Background</div>
-        <ul class="edu-list">
-            <li><strong>Elementary:</strong> San Bartolome Elementary School</li>
-            <li><strong>Junior High School:</strong> San Pedro National Highschool</li>
-            <li><strong>Senior High School:</strong> Sto.Tomas Senior Highschool</li>
+
+        <h4 class="fw-semibold mb-3">Educational Background</h4>
+        <ul class="list-group list-group-flush mb-4 mx-auto" style="max-width: 600px;">
+            <li class="list-group-item bg-transparent text-white border-white">Elementary: San Bartolome Elementary
+                School</li>
+            <li class="list-group-item bg-transparent text-white border-white">Junior High: San Pedro National High
+                School</li>
+            <li class="list-group-item bg-transparent text-white border-white">Senior High: Sto. Tomas Senior High
+                School</li>
         </ul>
 
-        <div class="section-title">Contact</div>
-        <div class="email-section">
+        <h4 class="fw-semibold mb-3">Contact</h4>
+        <div class="d-flex justify-content-center align-items-center gap-2 mb-4">
             <i class="bi bi-envelope-fill"></i>
             <span>delosreyeschristellekeith@gmail.com</span>
         </div>
 
         <div class="social-links">
-            <a href="https://www.instagram.com/chrstllkhtdlsrys/profilecard/?igsh=MXB6czJ1b3RweDZkMQ=="
-                target="_blank"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.instagram.com/chrstllkhtdlsrys" target="_blank"><i class="bi bi-instagram"></i></a>
             <a href="https://www.facebook.com/christellekeithdelosreyes" target="_blank"><i
                     class="bi bi-facebook"></i></a>
             <a href="https://github.com/Ck-delosreyes/Ck-delosreyes.github.io" target="_blank"><i
